--- a/assets/volet.css
+++ b/assets/volet.css
@@ -1,4 +1,5 @@
 body {
+    font-family: sans-serif;
     padding: 0;
     margin: 0;
     overflow: hidden;
@@ -8,6 +9,7 @@ body {
     box-sizing: border-box;
     transform: translate(100%);
     position: absolute;
+    z-index: 1000;
     padding: 10px 0 0 10px;
     top: 0px;
     right: 0px;
@@ -40,4 +42,40 @@ body {
     background-color: transparent;
     border: 2px solid bisque;
     font-style: italic;
+}
+
+.search {
+    font-size: 22px;
+    width: 100%;
+    margin: 5px;
+    border: 2px solid black;
+    border-radius: 3px;
+    padding: 2px;
+}
+
+.search-box {
+    position: relative;
+    width: 100%;
+}
+
+.search-list {
+    position: absolute;
+    z-index: 100;
+    width: 100%;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    margin-left: 10px;
+}
+
+.search-list li {
+    cursor: pointer;
+    font-size: 20px;
+    padding: 5px;
+    background: #ccc;
+    border-top: 1px solid black;
+}
+
+.search-list li:hover {
+    background: rgb(165, 165, 165);
 }
