--- a/assets/volet.css
+++ b/assets/volet.css
@@ -6,6 +6,7 @@ body {
 }
 
 .volet {
+    overflow-y: auto;
     box-sizing: border-box;
     transform: translate(100%);
     position: absolute;
@@ -18,6 +19,14 @@ body {
     background-color: antiquewhite;
     border-left: 1px solid black;
     transition: transform .4s;
+}
+
+.volet > .volet-content {
+    visibility: hidden;
+}
+
+.volet > .volet-content.visible {
+    visibility: visible;
 }
 
 .volet div {
