--- a/assets/database.css
+++ b/assets/database.css
@@ -2,4 +2,33 @@ body {
     font-family: sans-serif;
     padding: 0;
     margin: 0;
+    background-color: antiquewhite;
+}
+
+.card-content {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card {
+    cursor: pointer;
+    margin: 20px;
+    width: 300px;
+    border-radius: 3px;
+}
+
+.card__wrapper {
+    background-color: #fff;
+    box-shadow: 0px 0px 5px 5px rgba(87, 87, 87, 0.507);
+}
+
+.card__img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.card__date {
+    font-size: 12px;
+    margin-left: 10px;
 }
