--- a/assets/main.css
+++ b/assets/main.css
@@ -1,4 +1,4 @@
-body, button, .title-site {
+body, .btn-group, .title-site {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: normal;
   font-style: normal; }
@@ -37,19 +37,15 @@ main {
   width: 100%;
   height: calc(100vh - 132px); }
 
-button {
+.btn-group {
   border: unset;
-  padding: 2px 10px;
-  font-size: 11px;
-  margin: 0 4px;
-  border-radius: 3px;
+  display: block;
+  padding: 7px;
+  width: 100%;
+  font-size: 18px;
   color: white; }
-
-button.active {
-  text-decoration: line-through; }
-
-button.controle {
-  background-color: black; }
+  .btn-group.active {
+    text-decoration: line-through; }
 
 .burger {
   display: flex;
@@ -66,7 +62,6 @@ button.controle {
 .lateral {
   overflow-y: auto;
   box-sizing: border-box;
-  padding: 10px 0 0 10px;
   position: absolute;
   width: 300px;
   top: 0px;
