--- a/assets/main.css
+++ b/assets/main.css
@@ -68,11 +68,17 @@ main {
   background-color: #fffcfb;
   height: 100%;
   z-index: 100;
-  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22); }
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  transition: transform .2s;
+  transition-timing-function: cubic-bezier(0.96, 0, 0.19, 1.12); }
   .lateral--left {
-    left: 0px; }
+    left: 0px;
+    transform: translate(-100%); }
   .lateral--right {
-    right: 0px; }
+    right: 0px;
+    transform: translate(100%); }
+  .lateral--active {
+    transform: translate(0%); }
 
 .header {
   position: relative;
@@ -117,7 +123,7 @@ main {
     .navigation__button--important {
       background-color: #e3ce88; }
 
-.volet {
+.fiche {
   overflow-y: auto;
   box-sizing: border-box;
   transform: translate(100%);
@@ -131,20 +137,20 @@ main {
   background-color: antiquewhite;
   border-left: 1px solid black;
   transition: transform .4s; }
-  .volet > .volet-content {
+  .fiche > .volet-content {
     visibility: hidden; }
-    .volet > .volet-content.visible {
+    .fiche > .volet-content.visible {
       visibility: visible; }
-  .volet div {
+  .fiche div {
     margin: 10px 0; }
-  .volet__img {
+  .fiche__img {
     width: 100%;
     height: 300px;
     -o-object-fit: contain;
     object-fit: contain; }
-  .volet__label {
+  .fiche__label {
     font-size: 25px; }
-  .volet--active {
+  .fiche--active {
     transform: unset; }
 
 .connexion-list {
