--- a/assets/main.css
+++ b/assets/main.css
@@ -124,32 +124,29 @@ main {
       background-color: #e3ce88; }
 
 .fiche {
-  overflow-y: auto;
-  box-sizing: border-box;
-  transform: translate(100%);
-  position: absolute;
-  z-index: 1000;
-  padding: 10px 0 0 10px;
-  top: 0px;
-  right: 0px;
-  height: 100vh;
-  width: 300px;
-  background-color: antiquewhite;
-  border-left: 1px solid black;
-  transition: transform .4s; }
+  padding: 5px; }
   .fiche__content {
     visibility: hidden; }
     .fiche__content--visible {
       visibility: visible; }
-  .fiche div {
-    margin: 10px 0; }
+  .fiche__identite {
+    margin: 10px 0;
+    display: flex; }
   .fiche__img {
-    width: 100%;
-    height: 300px;
-    -o-object-fit: contain;
-    object-fit: contain; }
+    width: 100px;
+    height: 100px;
+    margin-right: 6px;
+    -o-object-fit: cover;
+    object-fit: cover; }
   .fiche__label {
-    font-size: 25px; }
+    font-size: 25px;
+    margin: 0; }
+  .fiche__dates {
+    margin: unset; }
+  .fiche__libelle {
+    display: inline-block;
+    width: 100%;
+    border-bottom: 1px solid black; }
   .fiche--active {
     transform: unset; }
 
@@ -160,7 +157,7 @@ main {
     border-top: 1px solid black;
     padding: 6px 2px;
     cursor: pointer;
-    background: #ddbf98; }
+    background: #e3ce88; }
     .connexion-list__elt:last-child {
       border-bottom: 1px solid black; }
 
