--- a/assets/main.css
+++ b/assets/main.css
@@ -107,11 +107,33 @@ main {
   margin: unset;
   text-transform: uppercase; }
 
-.navigation {
+.navigation__list {
+  display: flex;
+  list-style: none;
+  padding: unset;
+  margin: unset; }
+
+.navigation__link {
+  position: relative;
+  margin: 0 20px; }
+  .navigation__link a {
+    text-decoration: none;
+    color: inherit; }
+  .navigation__link::after {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 1px;
+    background-color: black;
+    bottom: -2px;
+    left: 5px;
+    transition: width .1s; }
+
+.toolbar {
   display: flex;
   justify-content: space-between;
   margin: 20px 0; }
-  .navigation__button {
+  .toolbar__button {
     cursor: pointer;
     box-sizing: border-box;
     display: flex;
@@ -120,7 +142,7 @@ main {
     height: 40px;
     border-radius: 5px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
-    .navigation__button--important {
+    .toolbar__button--important {
       background-color: #e3ce88; }
 
 .fiche {
