--- a/assets/main.css
+++ b/assets/main.css
@@ -1,4 +1,4 @@
-body, .btn-group, .title-site {
+body, .btn-group, .title-site, .search {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: normal;
   font-style: normal; }
@@ -114,6 +114,10 @@ main {
   margin: unset; }
 
 .navigation__link {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   position: relative;
   margin: 0 20px; }
   .navigation__link a {
@@ -135,6 +139,10 @@ main {
   margin: 20px 0; }
   .toolbar__button {
     cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
     box-sizing: border-box;
     display: flex;
     margin: 0 10px;
@@ -200,6 +208,7 @@ main {
 .search-list {
   position: absolute;
   z-index: 100;
+  font-size: 18px;
   width: 100%;
   list-style: none;
   padding: 0;
