--- a/assets/main.css
+++ b/assets/main.css
@@ -30,13 +30,11 @@ body {
   cursor: default;
   padding: 0;
   margin: 0;
-  overflow-x: hidden;
-  overflow-y: hidden; }
+  overflow-x: hidden; }
 
 main {
   position: relative;
-  width: 100%;
-  height: calc(100vh - 132px); }
+  width: 100%; }
 
 .btn-group {
   border: unset;
@@ -67,7 +65,7 @@ main {
   width: 300px;
   top: 0px;
   background-color: #fffcfb;
-  height: 100%;
+  height: calc(100vh - 132px);
   z-index: 100;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
   transition: transform .2s;
@@ -80,6 +78,9 @@ main {
     transform: translate(100%); }
   .lateral--active {
     transform: translate(0%); }
+  .lateral--fixed {
+    position: fixed;
+    top: 132px; }
 
 .introduction {
   height: calc(100vh - 60px); }
@@ -227,6 +228,14 @@ main {
     .search-list li:hover {
       background-color: #ebebeb; }
 
+.network-wrapper {
+  position: relative;
+  width: 100vw;
+  height: calc(100vh - 132px); }
+
+.network {
+  height: 100%; }
+
 .command-board {
   position: absolute;
   bottom: 0px;
@@ -241,3 +250,44 @@ main {
     color: white;
     min-width: 30px;
     height: 30px; }
+
+.board__wrapper {
+  display: flex;
+  flex-wrap: wrap; }
+
+.card {
+  position: relative;
+  cursor: pointer;
+  margin: 20px;
+  width: 300px;
+  height: 350px;
+  border-radius: 3px; }
+  .card div {
+    margin: 10px 0; }
+
+.card.active .card__wrapper {
+  position: absolute;
+  z-index: 2;
+  height: auto; }
+
+.card.active .card__details {
+  display: block; }
+
+.card__wrapper {
+  background-color: #fff;
+  box-shadow: 0px 0px 5px 5px rgba(87, 87, 87, 0.507);
+  padding: 5px;
+  height: 100%; }
+
+.card__img {
+  width: 100%;
+  height: 200px;
+  -o-object-fit: cover;
+  object-fit: cover; }
+
+.card__date {
+  font-size: 12px;
+  margin-left: 10px; }
+
+.card__details {
+  display: none; }
