[edit] navigation compacte

--- a/assets/main.css
+++ b/assets/main.css
@@ -1,4 +1,4 @@
-body, .btn-group, .title-site, .search {
+body, .btn-group, .title-site, .btn-fiche, .search-box__input {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: normal;
   font-style: normal; }
@@ -83,17 +83,30 @@ main {
     top: 132px; }
 
 .introduction {
-  overflow: hidden;
-  display: flex;
-  flex-wrap: wrap;
+  overflow-y: auto;
   padding: 10px;
   height: calc(100vh - 60px); }
   .introduction__wrapper {
+    display: flex;
+    flex-wrap: wrap;
     margin: 0 auto;
     width: 60%; }
   .introduction__img-otlet {
-    height: 300px;
-    margin-right: 20px; }
+    height: 250px;
+    flex: 1;
+    margin-right: 20px;
+    -o-object-fit: contain;
+    object-fit: contain; }
+  .introduction__texte {
+    flex: 2; }
+  .introduction__logo-list {
+    display: flex;
+    flex-wrap: nowrap; }
+  .introduction__logo {
+    width: 50px;
+    margin: 10px;
+    -o-object-fit: contain;
+    object-fit: contain; }
 
 .entete {
   position: relative;
@@ -127,6 +140,18 @@ main {
   margin: unset;
   text-transform: uppercase; }
 
+.btn-fiche {
+  cursor: pointer;
+  box-sizing: border-box;
+  display: flex;
+  margin: 0 10px;
+  padding: 1px 7px;
+  font-size: 18px;
+  border-radius: 5px;
+  border: unset;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  background-color: #e3ce88; }
+
 .navigation__list {
   display: flex;
   list-style: none;
@@ -159,10 +184,6 @@ main {
   margin: 20px 0; }
   .toolbar__button {
     cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
     box-sizing: border-box;
     display: flex;
     margin: 0 10px;
@@ -211,19 +232,28 @@ main {
     .connexion-list__elt:last-child {
       border-bottom: 1px solid black; }
 
-.search {
-  box-sizing: border-box;
-  font-size: 22px;
-  height: 40px;
-  width: 100%;
-  border-radius: 5px;
-  border: unset;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  text-indent: 10px; }
-
 .search-box {
   position: relative;
-  width: 60%; }
+  margin-right: 20px; }
+  .search-box__label {
+    cursor: pointer;
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    background-size: 15px;
+    background-image: url("./icons/search.svg");
+    display: block;
+    left: 7px;
+    z-index: 1;
+    top: 5px; }
+  .search-box__input {
+    position: relative;
+    box-sizing: border-box;
+    font-size: 18px;
+    border-radius: 5px;
+    border: unset;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    text-indent: 30px; }
 
 .search-list {
   position: absolute;
