[edit] changement noms outils

--- a/assets/main.css
+++ b/assets/main.css
@@ -159,6 +159,7 @@ main {
   margin: unset; }
 
 .navigation__link {
+  cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
