--- a/assets/main.css
+++ b/assets/main.css
@@ -318,41 +318,31 @@ main {
   overflow: auto;
   display: flex;
   flex-wrap: wrap;
-  height: calc(100vh - 105px); }
+  height: calc(100vh - 105px);
+  margin-right: 300px; }
 
 .card {
   position: relative;
   cursor: pointer;
   margin: 20px;
-  width: 300px;
-  height: 350px;
-  border-radius: 3px; }
-  .card div {
-    margin: 10px 0; }
-
-.card.active .card__wrapper {
-  position: absolute;
-  z-index: 2;
-  height: auto; }
-
-.card.active .card__details {
-  display: block; }
-
-.card__wrapper {
-  background-color: #fff;
-  box-shadow: 0px 0px 5px 5px rgba(87, 87, 87, 0.507);
-  padding: 5px;
-  height: 100%; }
-
-.card__img {
-  width: 100%;
-  height: 200px;
-  -o-object-fit: cover;
-  object-fit: cover; }
-
-.card__date {
-  font-size: 12px;
-  margin-left: 10px; }
-
-.card__details {
-  display: none; }
+  width: 240px;
+  height: 400px;
+  border-radius: 3px;
+  box-shadow: #d0d0d0 0 1px 6px; }
+  .card__img {
+    width: 100%;
+    height: 70%;
+    -o-object-fit: cover;
+    object-fit: cover;
+    border-radius: 3px; }
+  .card__label {
+    margin: 0 0 10px 0;
+    padding: 0 10px;
+    text-shadow: 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff; }
+  .card__date {
+    font-size: 12px;
+    margin-left: 10px; }
+  .card__titre {
+    padding: 0 10px;
+    text-shadow: 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff;
+    margin: 2px 0; }
