--- a/assets/main.css
+++ b/assets/main.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-body, .title-site, .btn-fiche, .btn-group, .search-box__input {
+button, body, .title-site, .btn-fiche, .btn-group, .search-box__input {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: normal;
   font-style: normal; }
@@ -120,10 +120,9 @@ main {
     justify-content: space-between;
     align-items: center; }
   .entete__identite {
+    cursor: pointer;
     display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: inherit; }
+    align-items: center; }
   .entete__logo {
     width: 30px;
     height: 30px;
@@ -217,6 +216,13 @@ main {
     visibility: hidden; }
     .fiche__content--visible {
       visibility: visible; }
+  .fiche__btn-visualiser {
+    border: unset;
+    background-color: black;
+    color: white;
+    border-radius: 3px;
+    font-size: 15px;
+    margin: 5px 0; }
   .fiche__identite {
     margin: 10px 0;
     display: flex; }
@@ -305,14 +311,28 @@ main {
   left: 0px;
   padding: 0 0 10px 10px; }
   .command-board__btn {
-    background-color: black;
+    cursor: pointer;
+    background: black;
     border: unset;
     border-radius: 3px;
     font-size: 15px;
     padding: 5px;
     color: white;
     min-width: 30px;
-    height: 30px; }
+    height: 30px;
+    margin: 7px;
+    -webkit-filter: drop-shadow(0px 0px 10px rgba(66, 66, 66, 0.5));
+    filter: drop-shadow(0px 0px 10px rgba(66, 66, 66, 0.5)); }
+    .command-board__btn--zoom {
+      background: url("./icons/zoom.svg");
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 30px; }
+    .command-board__btn--dezoom {
+      background: url("./icons/dezoom.svg");
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 30px; }
 
 .board__wrapper {
   overflow: auto;
