--- a/assets/main.css
+++ b/assets/main.css
@@ -9,7 +9,7 @@ body, button, .title-site, .btn-group, .search-box__input {
   font-weight: 600;
   font-style: normal; }
 
-.btn-group, .fiche__img {
+.btn-group, .fiche__img, .card, .card__img {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
 
 .lateral, .entete__fixe.entete__fixe--active {
@@ -411,7 +411,7 @@ button:focus {
 .board__wrapper {
   overflow: auto;
   height: calc(100vh - 105px);
-  margin-right: 300px; }
+  margin-right: 320px; }
 
 .board__conteneur {
   display: flex;
@@ -455,24 +455,21 @@ button:focus {
   position: relative;
   cursor: pointer;
   margin: 20px;
-  width: 240px;
-  height: 400px;
-  border-radius: 3px;
-  box-shadow: #d0d0d0 0 1px 6px; }
+  width: 200px;
+  height: auto;
+  border-radius: 3px; }
+  .card__presentation {
+    display: flex;
+    margin-bottom: 20px; }
   .card__img {
-    width: 100%;
-    height: 70%;
+    width: 70px;
+    height: 70px;
     -o-object-fit: cover;
     object-fit: cover;
-    border-radius: 3px; }
+    border-radius: 3px 0 0 0; }
+  .card__identite {
+    padding: 5px 0 0 10px; }
   .card__label {
-    margin: 0 0 10px 0;
-    padding: 0 10px;
-    text-shadow: 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff; }
-  .card__date {
-    font-size: 12px;
-    margin-left: 10px; }
+    margin: 0 0 5px 0; }
   .card__titre {
-    padding: 0 10px;
-    text-shadow: 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff;
-    margin: 2px 0; }
+    margin: 10px; }
