--- a/assets/main.css
+++ b/assets/main.css
@@ -408,14 +408,15 @@ button:focus {
   -webkit-filter: drop-shadow(0px 0px 10px rgba(66, 66, 66, 0.5));
   filter: drop-shadow(0px 0px 10px rgba(66, 66, 66, 0.5)); }
 
-.board__wrapper {
-  overflow: auto;
-  height: calc(100vh - 105px);
-  margin-right: 320px; }
-
-.board__conteneur {
-  display: flex;
-  flex-wrap: wrap; }
+.board {
+  border-top: 3px solid black; }
+  .board__wrapper {
+    overflow: auto;
+    height: calc(100vh - 105px);
+    margin-right: 320px; }
+  .board__conteneur {
+    display: flex;
+    flex-wrap: wrap; }
 
 .sort-alphabetic-list {
   list-style: none;
