--- a/assets/main.css
+++ b/assets/main.css
@@ -9,7 +9,7 @@ body, button, .title-site, .btn-group, .search-box__input {
   font-weight: 600;
   font-style: normal; }
 
-.btn-group, .fiche__img, .card, .card__img {
+.lang-box__flag, .btn-group, .fiche__img, .card, .card__img {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
 
 .sort-alphabetic-list {
@@ -136,6 +136,28 @@ button:focus {
 .title-site {
   margin: unset;
   text-transform: uppercase; }
+
+.lang-box {
+  display: flex; }
+  .lang-box__flag {
+    cursor: pointer;
+    margin: 0 10px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 50px;
+    border: 1px solid white;
+    opacity: .7;
+    transition: opacity .1s; }
+    .lang-box__flag--fr {
+      background-image: url("./icons/lang_france.svg"); }
+    .lang-box__flag--en {
+      background-image: url("./icons/lang_english.svg"); }
+    .lang-box__flag--active {
+      border: 1px solid black;
+      opacity: 1; }
 
 .navigation__list {
   display: flex;
