--- a/assets/main.css
+++ b/assets/main.css
@@ -353,15 +353,15 @@ button:focus {
   padding: 6px 2px;
   cursor: pointer; }
   .connexions__elt:hover .connexions__puce {
-    height: 10px; }
+    transform: scale(1.4); }
 
 .connexions__puce {
   display: block;
-  width: 20px;
-  height: 5px;
-  margin-right: 5px;
-  border-radius: 1px;
-  transition: height .1s; }
+  width: 10px;
+  height: 10px;
+  margin-right: 7px;
+  border-radius: 50%;
+  transition: transform .1s; }
 
 .search-box {
   position: relative;
