--- a/assets/main.css
+++ b/assets/main.css
@@ -19,7 +19,7 @@ h3 {
 .lang-box__flag, .btn-group, .fiche__img, .card, .card__img {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
 
-.sort-alphabetic-list {
+.sort-alphabetic-list, .overflow {
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); }
 
 .lateral, .entete__fixe.entete__fixe--active {
@@ -540,3 +540,15 @@ button:focus {
     font-size: 16px; }
   .card__titre {
     margin: 10px; }
+
+.overflow {
+  visibility: hidden;
+  position: absolute;
+  z-index: -1;
+  border-radius: 3px;
+  background-color: white;
+  box-sizing: border-box;
+  padding: 5px; }
+  .overflow--active {
+    visibility: visible;
+    z-index: 999; }
