--- a/assets/main.css
+++ b/assets/main.css
@@ -321,16 +321,16 @@ button:focus {
   margin: unset; }
 
 .fiche__wiki-link {
-  display: none;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  color: inherit;
   margin-top: 15px;
-  width: 20px;
-  height: 20px;
-  border: 1px solid black;
-  border-radius: 3px; }
+  width: 30px;
+  height: 30px;
+  border-radius: 3px;
+  background: url("./icons/wikipedia.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 30px;
+  -webkit-filter: drop-shadow(0px 0px 10px rgba(66, 66, 66, 0.5));
+  filter: drop-shadow(0px 0px 10px rgba(66, 66, 66, 0.5)); }
   .fiche__wiki-link--visible {
     display: flex; }
 
