--- a/assets/main.css
+++ b/assets/main.css
@@ -1,10 +1,10 @@
 @charset "UTF-8";
-body, button, .title-site, .btn-group, .search-box__input {
+body, button, .btn-group, .title-site, .search-box__input {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: normal;
   font-style: normal; }
 
-.title-site__bold, .btn-group::after, .fiche__wiki-link, .fiche__cle {
+.btn-group::after, .title-site__bold, .fiche__wiki-link, .fiche__cle {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 600;
   font-style: normal; }
@@ -16,7 +16,7 @@ h3 {
   font-weight: normal;
   font-style: normal; }
 
-.lang-box__flag, .btn-group, .fiche__img, .card, .card__img {
+.btn-group, .lang-box__flag, .fiche__img, .card, .card__img {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
 
 .sort-alphabetic-list, .overflow {
@@ -88,7 +88,7 @@ button:focus {
   width: 320px;
   top: 0px;
   background-color: #fffcfb;
-  height: calc(100vh - 112px);
+  height: calc(100vh - 115px);
   z-index: 100;
   transition: transform .2s;
   transition-timing-function: cubic-bezier(0.96, 0, 0.19, 1.12); }
@@ -102,30 +102,71 @@ button:focus {
     transform: translate(0%); }
   .lateral--fixed {
     position: fixed;
-    top: 112px; }
+    top: 115px; }
+  .lateral__entete {
+    display: flex;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
+  .lateral__btn-control {
+    cursor: pointer;
+    box-sizing: border-box;
+    width: 100%;
+    border: unset;
+    font-size: 15px;
+    padding: 2px 0;
+    height: 25px;
+    background-color: black;
+    color: white; }
+    .lateral__btn-control--imp {
+      background-color: #e2be48;
+      color: black; }
+    .lateral__btn-control--hidde {
+      display: none; }
+
+.btn-group {
+  position: relative;
+  border: unset;
+  display: block;
+  padding: 3px 30px 3px 10px;
+  margin: 0 2px;
+  border-radius: 3px;
+  width: 100%;
+  font-size: 14px;
+  color: white; }
+  .btn-group--large {
+    box-shadow: unset;
+    border-radius: unset;
+    margin: unset;
+    padding: 7px 30px 7px 10px; }
+  .btn-group::after {
+    position: absolute;
+    content: '✓';
+    color: black;
+    width: 15px;
+    height: 15px;
+    top: 20%;
+    background-color: white;
+    border-radius: 2px;
+    right: 10px;
+    padding: 2px;
+    box-sizing: border-box;
+    font-size: 11px;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+  .btn-group.active::after {
+    content: ''; }
 
 .introduction {
   overflow-y: auto;
   padding: 10px;
-  height: calc(100vh - 80px); }
+  height: calc(100vh - 60px); }
   .introduction h1 {
     margin: 0; }
-  .introduction__wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 20px auto 0 auto;
-    width: 70%; }
   .introduction__img-otlet {
     height: 50%;
-    flex: 1;
-    -o-object-fit: cover;
-    object-fit: cover;
-    border-radius: 3px;
     min-width: 150px;
-    margin: 0 20px 10px 0;
-    max-width: 300px; }
-  .introduction__texte {
-    flex: 2; }
+    max-width: 300px;
+    margin-bottom: 10px; }
   .introduction__logo-list {
     display: flex;
     flex-wrap: nowrap; }
@@ -140,24 +181,27 @@ button:focus {
   box-sizing: border-box;
   z-index: 999; }
   .entete__fixe {
+    overflow: hidden;
     left: 0px;
-    padding: 10px 20px; }
+    padding: 10px 20px 0 20px; }
     .entete__fixe.entete__fixe--active {
       box-sizing: border-box;
-      padding: 10px 20px;
       position: fixed;
       top: 0px;
       left: 0px;
       background-color: white;
-      width: 100%; }
+      width: 100%;
+      height: 115px; }
   .entete__top {
     display: flex;
     justify-content: space-between;
-    align-items: center; }
+    align-content: stretch;
+    flex-wrap: wrap; }
   .entete__identite {
     cursor: pointer;
     display: flex;
-    align-items: center; }
+    align-items: center;
+    margin-bottom: 10px; }
 
 .title-site {
   margin: unset;
@@ -234,55 +278,6 @@ button:focus {
   .toolbar__section {
     display: flex;
     margin: 0 10px; }
-
-.btn-group {
-  position: relative;
-  border: unset;
-  display: block;
-  padding: 3px 30px 3px 10px;
-  margin: 0 2px;
-  border-radius: 3px;
-  width: 100%;
-  font-size: 14px;
-  color: white; }
-  .btn-group::after {
-    position: absolute;
-    content: '✓';
-    color: black;
-    width: 15px;
-    height: 15px;
-    top: 4px;
-    background-color: white;
-    border-radius: 2px;
-    right: 10px;
-    padding: 2px;
-    box-sizing: border-box;
-    font-size: 11px;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-  .btn-group.active::after {
-    content: ''; }
-
-.fiche__entete {
-  display: flex;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
-
-.fiche__btn-control {
-  cursor: pointer;
-  box-sizing: border-box;
-  width: 100%;
-  border: unset;
-  font-size: 15px;
-  padding: 2px 0;
-  height: 25px;
-  background-color: black;
-  color: white; }
-  .fiche__btn-control--imp {
-    background-color: #e2be48;
-    color: black; }
-  .fiche__btn-control--hidde {
-    display: none; }
 
 .fiche__content {
   overflow: auto;
@@ -422,10 +417,32 @@ button:focus {
 .network-wrapper {
   position: relative;
   width: 100vw;
-  height: calc(100vh - 112px); }
+  height: calc(100vh - 115px); }
 
 .network {
   height: 100%; }
+  .network__btn {
+    z-index: 1;
+    cursor: pointer;
+    position: absolute;
+    top: 15px;
+    border: unset;
+    width: 50px;
+    height: 50px;
+    -webkit-filter: drop-shadow(0px 0px 10px rgba(66, 66, 66, 0.5));
+    filter: drop-shadow(0px 0px 10px rgba(66, 66, 66, 0.5)); }
+    .network__btn--right {
+      right: 15px;
+      background: url("./icons/infos.svg");
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 20px; }
+    .network__btn--left {
+      left: 15px;
+      background: url("./icons/filter.svg");
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 20px; }
 
 .command-board {
   position: absolute;
@@ -456,28 +473,12 @@ button:focus {
       background-position: center;
       background-size: 30px; }
 
-.btn-fiche {
-  z-index: 1;
-  cursor: pointer;
-  position: absolute;
-  right: 15px;
-  top: 15px;
-  border: unset;
-  background: url("./icons/infos.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  width: 50px;
-  height: 50px;
-  background-size: 20px;
-  -webkit-filter: drop-shadow(0px 0px 10px rgba(66, 66, 66, 0.5));
-  filter: drop-shadow(0px 0px 10px rgba(66, 66, 66, 0.5)); }
-
 .board {
   position: relative; }
   .board__wrapper {
     overflow: auto;
     box-sizing: border-box;
-    height: calc(100vh - 112px);
+    height: calc(100vh - 115px);
     padding-left: 40px;
     width: calc(100% - 320px); }
   .board__section {
