--- a/docs/extras/style.css
+++ b/docs/extras/style.css
@@ -1,3 +1,12 @@
 .highlight code {
     line-height: 1.4rem;
 }
+
+.md-typeset .admonition {
+    font-size: unset !important;
+}
+
+.md-typeset code {
+    font-size: 0.85rem;
+    letter-spacing: 0.01rem;
+}
